--- a/Personal Assistant/Base.lproj/Main.storyboard
+++ b/Personal Assistant/Base.lproj/Main.storyboard
@@ -10,6 +10,12 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-DemiBold</string>
+            <string>AvenirNext-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Personal Assistant-->
         <scene sceneID="tne-QT-ifu">
@@ -80,11 +86,171 @@
                     <navigationItem key="navigationItem" title="Personal Assistant" id="I4s-CW-dHN"/>
                     <connections>
                         <outlet property="assistanceTable" destination="eUH-iY-9UC" id="p5R-5e-poI"/>
+                        <segue destination="BQr-QT-Otc" kind="show" identifier="PersonalDiarySegue" id="akt-1e-tog"/>
+                        <segue destination="3EF-n0-jCT" kind="show" identifier="LocateFriendsSegue" id="TVU-7a-0Zp"/>
+                        <segue destination="aCL-WP-SFh" kind="show" identifier="HealthDashboardSegue" id="zdN-6p-l7k"/>
+                        <segue destination="JH8-si-N1A" kind="show" identifier="ImageRecognitionSegue" id="vy7-Vu-tqK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="372" y="33.733133433283363"/>
+        </scene>
+        <!--Personal DiaryVC-->
+        <scene sceneID="KuT-Mv-eB3">
+            <objects>
+                <viewController id="BQr-QT-Otc" customClass="PersonalDiaryVC" customModule="Personal_Assistant" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QYy-co-RKv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hF4-EI-VQa">
+                                <rect key="frame" x="16" y="20" width="343" height="565"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="DGC-gn-EsF"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V8t-jT-0eg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-430" y="843"/>
+        </scene>
+        <!--Locate FriendsVC-->
+        <scene sceneID="ojq-hy-i0r">
+            <objects>
+                <viewController id="3EF-n0-jCT" customClass="LocateFriendsVC" customModule="Personal_Assistant" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="umw-6N-874">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="iJ0-ah-sfh"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wan-FK-gYe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="372" y="842"/>
+        </scene>
+        <!--Health DashboardVC-->
+        <scene sceneID="KRt-kM-XTK">
+            <objects>
+                <viewController id="aCL-WP-SFh" customClass="HealthDashboardVC" customModule="Personal_Assistant" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="h5o-4p-rCX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="i1x-7G-evK"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ySp-P6-ADh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1182" y="842"/>
+        </scene>
+        <!--Image RecognitionVC-->
+        <scene sceneID="3ae-hN-Is2">
+            <objects>
+                <viewController id="JH8-si-N1A" customClass="ImageRecognitionVC" customModule="Personal_Assistant" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xX7-By-Ei2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kPC-Y0-Eli">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.40385112717257399" blue="0.2744078088760763" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fYJ-fu-Ysi" customClass="RoundedShadowView" customModule="Personal_Assistant" customModuleProvider="target">
+                                <rect key="frame" x="20" y="94" width="335" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The names of items captured will appear here." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="uXY-yT-bmF">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="O2M-Ue-l7V"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                        <color key="textColor" red="1" green="0.43616002240000001" blue="0.15052963629999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CONFIDENCE: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8i-Hj-nHL">
+                                        <rect key="frame" x="0.0" y="30" width="335" height="22"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="22" id="56L-DM-x9m"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="sJv-LX-Lg1"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="10"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="S8i-Hj-nHL" firstAttribute="leading" secondItem="fYJ-fu-Ysi" secondAttribute="leading" id="9Pc-Mk-zf4"/>
+                                    <constraint firstItem="S8i-Hj-nHL" firstAttribute="top" secondItem="uXY-yT-bmF" secondAttribute="bottom" id="F9c-ZI-g4M"/>
+                                    <constraint firstAttribute="trailing" secondItem="uXY-yT-bmF" secondAttribute="trailing" id="IbY-U1-3Cp"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="IcN-Rw-GKS"/>
+                                    <constraint firstItem="uXY-yT-bmF" firstAttribute="leading" secondItem="fYJ-fu-Ysi" secondAttribute="leading" id="Ifj-Fw-zdE"/>
+                                    <constraint firstAttribute="height" constant="60" id="JQA-Oc-xnS"/>
+                                    <constraint firstAttribute="trailing" secondItem="S8i-Hj-nHL" secondAttribute="trailing" id="QFQ-oW-pNz"/>
+                                    <constraint firstItem="S8i-Hj-nHL" firstAttribute="leading" secondItem="fYJ-fu-Ysi" secondAttribute="leading" id="qKi-de-se9"/>
+                                    <constraint firstItem="uXY-yT-bmF" firstAttribute="top" secondItem="fYJ-fu-Ysi" secondAttribute="top" id="qbL-TZ-nLC"/>
+                                    <constraint firstAttribute="trailing" secondItem="S8i-Hj-nHL" secondAttribute="trailing" id="udH-S6-EWV"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O8z-Qd-1CO" customClass="RoundedShadowButton" customModule="Personal_Assistant" customModuleProvider="target">
+                                <rect key="frame" x="20" y="617" width="85" height="30"/>
+                                <color key="backgroundColor" red="0.99404441874775362" green="1" blue="0.9921410177308212" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="85" id="Fcl-VH-Lmf"/>
+                                    <constraint firstAttribute="height" constant="30" id="IQd-m3-IcV"/>
+                                </constraints>
+                                <state key="normal" title="Flash OFF">
+                                    <color key="titleColor" red="1" green="0.33787735971106647" blue="0.29481431409847347" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Flp-bM-BCs" customClass="RoundedShadowImageView" customModule="vision_app_dev" customModuleProvider="target">
+                                <rect key="frame" x="280" y="519" width="75" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="IP7-Ob-1dn"/>
+                                    <constraint firstAttribute="width" constant="75" id="g4w-lg-sCe"/>
+                                </constraints>
+                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="A19-5s-CQh">
+                                <rect key="frame" x="307" y="573" width="20" height="20"/>
+                                <color key="color" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="5Ah-7F-RYs" firstAttribute="trailing" secondItem="Flp-bM-BCs" secondAttribute="trailing" constant="20" id="4Yw-T4-K4W"/>
+                            <constraint firstItem="5Ah-7F-RYs" firstAttribute="bottom" secondItem="O8z-Qd-1CO" secondAttribute="bottom" constant="20" id="AD3-9U-QOb"/>
+                            <constraint firstItem="O8z-Qd-1CO" firstAttribute="leading" secondItem="5Ah-7F-RYs" secondAttribute="leading" constant="20" id="Cmi-iB-0Va"/>
+                            <constraint firstItem="5Ah-7F-RYs" firstAttribute="trailing" secondItem="fYJ-fu-Ysi" secondAttribute="trailing" constant="20" id="YGf-R3-TQr"/>
+                            <constraint firstItem="5Ah-7F-RYs" firstAttribute="bottom" secondItem="Flp-bM-BCs" secondAttribute="bottom" constant="20" id="ajN-DS-HvF"/>
+                            <constraint firstItem="fYJ-fu-Ysi" firstAttribute="leading" secondItem="5Ah-7F-RYs" secondAttribute="leading" constant="20" id="krJ-Q5-pH8"/>
+                            <constraint firstItem="A19-5s-CQh" firstAttribute="centerX" secondItem="Flp-bM-BCs" secondAttribute="centerX" id="nPh-eD-9fk"/>
+                            <constraint firstItem="A19-5s-CQh" firstAttribute="centerY" secondItem="Flp-bM-BCs" secondAttribute="centerY" id="v7f-bN-Swe"/>
+                            <constraint firstItem="fYJ-fu-Ysi" firstAttribute="top" secondItem="5Ah-7F-RYs" secondAttribute="top" constant="30" id="zwh-RJ-Mxz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5Ah-7F-RYs"/>
+                    </view>
+                    <connections>
+                        <outlet property="cameraView" destination="kPC-Y0-Eli" id="i1L-k9-beV"/>
+                        <outlet property="captureImageView" destination="Flp-bM-BCs" id="8ev-5C-Vuc"/>
+                        <outlet property="confidenceLbl" destination="S8i-Hj-nHL" id="WEc-X7-56g"/>
+                        <outlet property="flashBtn" destination="O8z-Qd-1CO" id="qZL-ws-8Yv"/>
+                        <outlet property="identificationLbl" destination="uXY-yT-bmF" id="e9F-hF-6JJ"/>
+                        <outlet property="roundedLblView" destination="fYJ-fu-Ysi" id="HME-4z-Nyf"/>
+                        <outlet property="spinner" destination="A19-5s-CQh" id="Mfc-T8-a3i"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xIe-MP-RFo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2005.5999999999999" y="841.52923538230891"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="VhK-Du-U4l">
