--- a/Personal Assistant/Base.lproj/Main.storyboard
+++ b/Personal Assistant/Base.lproj/Main.storyboard
@@ -186,7 +186,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kPC-Y0-Eli">
                                 <rect key="frame" x="0.0" y="64" width="414" height="672"/>
-                                <color key="backgroundColor" red="1" green="0.40385112717257399" blue="0.2744078088760763" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fYJ-fu-Ysi" customClass="RoundedShadowView" customModule="Personal_Assistant" customModuleProvider="target">
                                 <rect key="frame" x="20" y="94" width="374" height="60"/>
@@ -283,13 +283,12 @@
         <!--Navigation Controller-->
         <scene sceneID="VhK-Du-U4l">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ejh-QY-sKZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vDY-Dh-ARF" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3Rr-WZ-lHD">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="1" green="0.43616002240660057" blue="0.15052963628561211" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="barTintColor" red="0.15294117647058825" green="0.61176470588235299" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </textAttributes>
@@ -299,6 +298,7 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="JrD-FO-OX0"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ejh-QY-sKZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-80" y="33"/>
         </scene>
@@ -314,7 +314,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="FallingPerson1.png" translatesAutoresizingMaskIntoConstraints="NO" id="spo-F6-l2l">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="FallingPerson" translatesAutoresizingMaskIntoConstraints="NO" id="spo-F6-l2l">
                                 <rect key="frame" x="0.0" y="128" width="414" height="415"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Fall Detected" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="itU-c4-Wzb">
@@ -330,7 +330,7 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fq8-hu-NIU" customClass="RoundedShadowButton" customModule="Personal_Assistant" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="300" height="40"/>
-                                        <color key="backgroundColor" red="0.33867791295051575" green="0.66832423210144043" blue="0.3078702986240387" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="1" green="0.67456764150000004" blue="0.39610204199999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="FUh-gL-L79"/>
                                         </constraints>
@@ -426,7 +426,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <color key="backgroundColor" red="1" green="0.33787735969999999" blue="0.29481431409999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <color key="backgroundColor" red="0.61568627450980395" green="0.63529411764705879" blue="0.63529411764705879" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <constraints>
                                                 <constraint firstItem="82C-tC-VqQ" firstAttribute="baseline" secondItem="nac-Aa-i0f" secondAttribute="baseline" id="3iw-5a-lK3"/>
                                                 <constraint firstItem="AYs-ke-x4x" firstAttribute="leading" secondItem="15L-Vl-3oo" secondAttribute="leading" constant="8" id="KMm-Ye-mRv"/>
@@ -533,7 +533,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" red="1" green="0.33787735969999999" blue="0.29481431409999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <color key="backgroundColor" red="0.61568627450980395" green="0.63529411764705879" blue="0.63529411764705879" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <constraints>
                                                         <constraint firstItem="aHz-We-5oK" firstAttribute="leading" secondItem="bG2-qW-h9A" secondAttribute="leading" constant="8" id="Cel-cY-ARQ"/>
                                                         <constraint firstItem="KJ6-FK-GtZ" firstAttribute="baseline" secondItem="ghA-o7-o5K" secondAttribute="baseline" id="L0l-5i-lEf"/>
@@ -659,7 +659,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="FallingPerson1.png" width="480" height="480"/>
+        <image name="FallingPerson" width="480" height="480"/>
         <image name="digital" width="1024" height="703"/>
     </resources>
 </document>
